--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/safrinpatil/"><i class="fab fa-instagram"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
-                            <a href="" class="btn w-50 border-end">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1oqTsE33uYO97B4al5nm2H9ahSJXu78Gz/view?usp=sharing" class="btn w-50 border-end">Download CV</a>
                             <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a>
                         </div>
                     </div>
